# ffmpeg-ui

./: .gitignore  Cargo.toml  Dockerfile  build.rs  index.html  readme.md  server.rs
src/: app.rs  main.rs
src/css/: index.scss
src/ffmpeg/: avcodec.rs  avfilter.rs  avformat.rs  avutil.rs  mod.rs  swresample.rs  swscale.rs  x264.rs  x264_wrapper.h
